force-app/main/default/objects/PS_Attributes_Details__c/PS_Attributes_Details__c.object-meta.xml
<CustomObject>
    <label>PS_Attributes_Details</label>
    <nameField>
        <label>PS_Attributes_Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_Attributes_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>