force-app/main/default/objects/PS_Attributes_Details__c/fields/Field_13__c.field-meta.xml
<CustomField>
    <fullName>Field_13__c</fullName>
    <label>Field 13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>